# lemmo-be-core

./: .gitignore  LICENSE  README.md  debug_schema_issue.py  pyproject.toml  requirements.txt  setup.py  test_django5_compatibility.py  test_schema.py
core/: __init__.py  admin.py  app_manager.py  app_utils.py  schema.py  tests.py  urls.py  views.py
core/gql/mutations/: core.py
core/gql/queries/: __init__.py  core.py
core/models/: __init__.py  abstract_models.py
examples/: basic_usage.py
